--- a/Combined/style.css
+++ b/Combined/style.css
@@ -6,35 +6,26 @@
 body, html{
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
-#divCanvas {
-	position: absolute;	
-	top: 10%;
-	height: 85%;
-	width: 80%;
-	background: red;
-}
-
-#canvas {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	display: block;
-}
 
 #divChat{
 	position: absolute;
 	right: 0;
-	top: 10%;
+	top: 5%;
 	width: 20%;
-	height:85%;
-	background: green;
+	height: 95%;
+	background: yellow;
 }
 
 #divTools{
 	position: absolute;
-	height: 10%;
+	height: 5%;
 	width:100%;
-	background: blue;
+	background: black;
+}
+
+#drawing{
+	top: 0;
 }
