--- a/Combined/style.css
+++ b/Combined/style.css
@@ -1,12 +1,14 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 body, html{
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	font: 13px Helvetica, Arial;
 }
 
 
@@ -29,3 +31,58 @@ body, html{
 #drawing{
 	top: 0;
 }
+
+form { 
+	background: #000;
+	padding: 3px;
+	position: absolute;
+	bottom: 0;
+	width: 20%;
+	height: 12.5%;
+	right: 0;
+}
+
+form input { 
+	width: 100%; 
+	border: 0; 
+	padding: 10px; 
+	height: 55%;
+}
+
+
+form button { 
+	width: 100%; 
+	background: rgb(130, 224, 255); 
+	border: none; 
+	height: 40%; 
+	margin-top: 1%;
+}
+
+#messages { 
+	list-style-type: none;
+	right: 0; 
+	border: 3px solid black; 
+	height: 83%; 
+	position: fixed; 
+	overflow-y: auto; 
+	width: 20%;
+	top: 4.7%;
+}
+
+#messages li { 
+	padding: 5px 10px; 
+	word-wrap: break-word; 
+}
+
+#messages li:nth-child(odd) { 
+	background: #eee; 
+}
+
+/** { margin: 0; padding: 0; box-sizing: border-box; }
+       body { font: 13px Helvetica, Arial; }
+       form { background: #000; padding: 3px; position: fixed; bottom: 0; margin-left: 75%; width: 340px; height: 17.5%;}
+       form input { width: 100%; border: 0; padding: 10px; height: 55%}
+       form button { width: 100%; background: rgb(130, 224, 255); border: none; height: 40%; margin-top: 1%}
+       #messages { list-style-type: none; margin: 0 px; padding: `px; margin-left: 75%; border: 3px solid black; height: 82.5%; position: fixed; overflow-y: auto; width: 340px;}
+       #messages li { padding: 5px 10px; word-wrap: break-word; }
+       #messages li:nth-child(odd) { background: #eee; }*/
