--- a/Combined/style.css
+++ b/Combined/style.css
@@ -15,6 +15,12 @@ button{
 	background: white;
 }
 
+#erasebutton{
+	position:absolute;
+	height:100%;
+	width: 15%;
+}
+
 #divTools{
 	position: absolute;
 	height: 5%;
