--- a/Combined/style.css
+++ b/Combined/style.css
@@ -16,9 +16,15 @@ button{
 }
 
 #erasebutton{
-	position:absolute;
+	position:relative;
 	height:100%;
 	width: 15%;
+}
+
+#save{
+	position:relative;
+	height:100%;
+	width:15%
 }
 
 #divTools{
