--- a/Combined/style.css
+++ b/Combined/style.css
@@ -39,7 +39,7 @@ button{
 	position: absolute;
 	height: 5%;
 	width:100%;
-	background: black;
+	background: #3f2860;
 }
 
 #drawing{
@@ -48,12 +48,12 @@ button{
 }
 
 form {
-	background: #000;
+	background: #3f2860;
 	padding: 3px;
 	position: absolute;
 	bottom: 0;
 	width: 20%;
-	height: 12.5%;
+	height: 7.5%;
 	right: 0;
 }
 
@@ -61,7 +61,7 @@ form input {
 	width: 100%;
 	border: 0;
 	padding: 10px;
-	height: 55%;
+	height: 98%;
 }
 
 
@@ -76,8 +76,8 @@ form button {
 #messages {
 	list-style-type: none;
 	right: 0;
-	border: 3px solid black;
-	height: 83%;
+	border: 3px solid #3f2860;
+	height: 88.1%;
 	position: fixed;
 	overflow-y: auto;
 	width: 20%;
