--- a/Combined/style.css
+++ b/Combined/style.css
@@ -4,6 +4,26 @@
 	box-sizing: border-box;
 }
 
+ul::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+ul::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+ul::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #3f2860;
+}
+
 body, html{
 	width: 100%;
 	height: 100%;
