--- a/Combined/style.css
+++ b/Combined/style.css
@@ -35,6 +35,14 @@ button{
 	background: white;
 }
 
+form label {
+	color: white;
+}
+
+form input {
+	width: 100%;
+}
+
 #widthSize{
 	left: 40%;
 }
@@ -49,17 +57,46 @@ button{
 	width: 15%;
 }
 
-#save{
-	position:relative;
-	height:100%;
-	width:15%
-}
-
-#divTools{
+#ulTools{
+	list-style-type: none;
 	position: absolute;
 	height: 5%;
 	width:100%;
 	background: #3f2860;
+}
+
+.liRight{
+	float: right;
+	width: 10%;
+	height: 100%;
+}
+
+.liRight a {
+	height:100%;
+	width:100%
+}
+
+.liLeft{
+	float: left;
+	margin-right: 1%;
+	width: 10%;
+	height: 100%;
+}
+
+.liLeft button {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.liLeft form {
+	height: 100%;
+	width: 100%;
+}
+
+#save {
+	width: 100%;
+	height: 100%;
 }
 
 #drawing{
@@ -92,7 +129,8 @@ button{
 	position: fixed;
 	overflow-y: auto;
 	width: 20%;
-	top: 4.7%;
+	border-top: none;
+	top: 5%;
 	background: white;
 }
 
